<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_credits_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iovirta.iot_kamera_sovellus.credits"

    android:background="@color/Make_it_blackey">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/captionlayout"
            android:layout_alignParentTop="true">

            <TextView
                android:text="@string/mainactivity_headerfirstline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                tools:text="@string/mainactivity_headerfirstline"
                android:typeface="normal"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textSize="24sp"
                tools:textColor="?android:attr/textColorSearchUrl"
                android:textColor="@android:color/holo_blue_light"
                android:textAlignment="center" />

            <TextView
                android:text="@string/mainactivity_headersecondline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textColor="@android:color/holo_blue_dark"
                android:textAlignment="center"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/makerslayout"
            android:baselineAligned="false"
            android:layout_alignParentBottom="false"
            android:gravity="top"
            android:layout_gravity="top"
            android:layout_below="@+id/captionlayout">

        <TextView
            android:text="@string/mainactivity_makerfront"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:paddingLeft="@dimen/mainactivity_makers" />


            <TextView
                android:text="@string/mainactivity_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                tools:text="@string/mainactivity_back"
                android:paddingLeft="@dimen/mainactivity_frontandback_captions" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/mainactivity_makers" />

        <TextView
            android:text="@string/mainactivity_makerback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:paddingLeft="@dimen/mainactivity_makers" />

        <TextView
            android:text="@string/mainactivity_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            tools:text="@string/mainactivity_back"
            android:paddingLeft="@dimen/mainactivity_frontandback_captions" />

        </LinearLayout>
        </RelativeLayout>

</RelativeLayout>
